--- a/nodejs-api/package.json
+++ b/nodejs-api/package.json
@@ -14,6 +14,8 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "hono": "^4.8.12"
+    "@hono/zod-validator": "^0.7.2",
+    "hono": "^4.8.12",
+    "zod": "^4.0.17"
   }
 }
