--- a/nodejs-api/package.json
+++ b/nodejs-api/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@hono/zod-validator": "^0.7.2",
     "hono": "^4.8.12",
+    "p-limit": "^6.2.0",
     "zod": "^4.0.17"
   }
 }
