--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,13 @@
 services:
-  api:
+  node-api:
     build: ./nodejs-api
     ports:
       - "8080:3000"
+  
+  rails-api:
+    build: ./rails-api
+    ports:
+      - "8081:3000"
+    environment:
+      - RAILS_ENV=development
+      - SECRET_KEY_BASE=development_secret_key_that_is_long_enough_for_rails_to_be_happy_with_it
